Change Active Tab

--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,10 @@
   <h2>Welcome to the Resume Application!</h2>
 
   <ul class="nav nav-pills">
-    <li><a data-toggle="pill" href="#education">Education</a></li>
+    <li class="active"><a data-toggle="pill" href="#education">Education</a></li>
     <li><a data-toggle="pill" href="#skills">Skills</a></li>
     <li><a data-toggle="pill" href="#projects">Projects</a></li>
-    <li class="active"><a data-toggle="pill" href="#admin">Admin</a></li>
+    <li><a data-toggle="pill" href="#admin">Admin</a></li>
   </ul>
 
   <div class="tab-content">
