--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   </ul>
 
   <div class="tab-content">
-      <div id="education" class="tab-pane fade">
+      <div id="education" class="tab-pane fade in active">
         <h3>EDUCATION</h3>
         <table class="table">
           <thead>
@@ -97,7 +97,7 @@
           </tbody>
         </table>
       </div>
-      <div id="admin" class="tab-pane fade in active">
+      <div id="admin" class="tab-pane fade">
         <h3>Admin</h3>
         <h3>SKILLS</h3>
         <table class="table">
