Minor Changes to Admin Page

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,14 @@
               <td><button class="btn btn-danger" ng-click="remove(education._id)">Remove</button></td>
               <td><button class="btn btn-warning" ng-click="editEducation(education._id)">Edit</button></td>
             </tr>
+            <tr>
+              <input type="hidden" class="form-control" ng-model="education.type" ng-init="education.type ='Education'">
+              <td><input class="form-control" ng-model="education.school"></td>
+              <td><input class="form-control" ng-model="education.degree"></td>
+              <td><input class="form-control" ng-model="education.last_year"></td>
+              <td><button class="btn btn-primary" ng-click="addEducation()">Add Education</button></td>
+              <td><button class="btn btn-info" ng-click="updateEducation()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselectEducation()">Clear</button></td>
+            </tr>
           </tbody>
         </table>
       </div>
@@ -73,78 +81,16 @@
               <td><button class="btn btn-danger" ng-click="remove(skill._id)">Remove</button></td>
               <td><button class="btn btn-warning" ng-click="editSkill(skill._id)">Edit</button></td>
             </tr>
+            <tr>
+              <input type="hidden" class="form-control" ng-model="skill.type" ng-init="skill.type ='Skill'">
+              <td><input class="form-control" ng-model="skill.skill"></td>
+              <td><button class="btn btn-primary" ng-click="addSkill()">Add Skill</button></td>
+              <td><button class="btn btn-info" ng-click="updateSkill()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselectSkill()">Clear</button></td>
+            </tr>
           </tbody>
         </table>
       </div>
       <div id="projects" class="tab-pane fade">
-        <h3>PROJECTS</h3>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Title<br></th>
-            <th>Description<br></th>
-            <th>Action<br></th>
-            <th>&nbsp;</th>
-          </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="project in users" ng-if="project.type === 'Project'">
-              <td>{{project.title}}</td>
-              <td>{{project.description}}</td>
-              <td><button class="btn btn-danger" ng-click="remove(project._id)">Remove</button></td>
-              <td><button class="btn btn-warning" ng-click="editProject(project._id)">Edit</button></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div id="admin" class="tab-pane fade">
-        <h3>Admin</h3>
-        <h3>SKILLS</h3>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Skill<br></th>
-              <th>Action<br></th>
-              <th>&nbsp;</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="skill in users" ng-if="skill.type === 'Skill'">
-              <td>{{skill.skill}}</td>
-              <td><button class="btn btn-danger" ng-click="remove(skill._id)">Remove</button></td>
-              <td><button class="btn btn-warning" ng-click="editSkill(skill._id)">Edit</button></td>
-            </tr>
-            <tr>
-              <input type="hidden" class="form-control" ng-model="skill.type" ng-init="skill.type ='Skill'">
-              <td><input class="form-control" ng-model="skill.skill"></td>
-              <td><button class="btn btn-primary" ng-click="addSkill()">Add Skill</button></td>
-              <td><button class="btn btn-info" ng-click="updateSkill()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselectSkill()">Clear</button></td>
-            </tr>
-          </tbody>
-        </table>
-        <h3>SKILLS</h3>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Skill<br></th>
-              <th>Action<br></th>
-              <th>&nbsp;</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="skill in users" ng-if="skill.type === 'Skill'">
-              <td>{{skill.skill}}</td>
-              <td><button class="btn btn-danger" ng-click="remove(skill._id)">Remove</button></td>
-              <td><button class="btn btn-warning" ng-click="editSkill(skill._id)">Edit</button></td>
-            </tr>
-            <tr>
-              <input type="hidden" class="form-control" ng-model="skill.type" ng-init="skill.type ='Skill'">
-              <td><input class="form-control" ng-model="skill.skill"></td>
-              <td><button class="btn btn-primary" ng-click="addSkill()">Add Skill</button></td>
-              <td><button class="btn btn-info" ng-click="updateSkill()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselectSkill()">Clear</button></td>
-            </tr>
-          </tbody>
-        </table>
         <h3>PROJECTS</h3>
         <table class="table">
           <thead>
@@ -171,6 +117,88 @@
             </tr>
           </tbody>
         </table>
+      </div>
+      <div id="admin" class="tab-pane fade">
+        <h3>ADMIN</h3>
+        <h4>EDUCATION</h4>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>School<br></th>
+              <th>Degree<br></th>
+              <th>Last Year<br></th>
+              <th>Action<br></th>
+            <th>&nbsp;</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="education in users" ng-if="education.type === 'Education'">
+              <td>{{education.school}}</td>
+              <td>{{education.degree}}</td>
+              <td>{{education.last_year}}</td>
+              <td><button class="btn btn-danger" ng-click="remove(education._id)">Remove</button></td>
+              <td><button class="btn btn-warning" ng-click="editEducation(education._id)">Edit</button></td>
+            </tr>
+            <tr>
+              <input type="hidden" class="form-control" ng-model="education.type" ng-init="education.type ='Education'">
+              <td><input class="form-control" ng-model="education.school"></td>
+              <td><input class="form-control" ng-model="education.degree"></td>
+              <td><input class="form-control" ng-model="education.last_year"></td>
+              <td><button class="btn btn-primary" ng-click="addEducation()">Add Education</button></td>
+              <td><button class="btn btn-info" ng-click="updateEducation()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselectEducation()">Clear</button></td>
+            </tr>
+          </tbody>
+        </table>
+        <h4>SKILLS</h4>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Skill<br></th>
+              <th>Action<br></th>
+              <th>&nbsp;</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="skill in users" ng-if="skill.type === 'Skill'">
+              <td>{{skill.skill}}</td>
+              <td><button class="btn btn-danger" ng-click="remove(skill._id)">Remove</button></td>
+              <td><button class="btn btn-warning" ng-click="editSkill(skill._id)">Edit</button></td>
+            </tr>
+            <tr>
+              <input type="hidden" class="form-control" ng-model="skill.type" ng-init="skill.type ='Skill'">
+              <td><input class="form-control" ng-model="skill.skill"></td>
+              <td><button class="btn btn-primary" ng-click="addSkill()">Add Skill</button></td>
+              <td><button class="btn btn-info" ng-click="updateSkill()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselectSkill()">Clear</button></td>
+            </tr>
+          </tbody>
+        </table>
+        <h4>PROJECTS</h4>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Title<br></th>
+            <th>Description<br></th>
+            <th>Action<br></th>
+            <th>&nbsp;</th>
+          </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="project in users" ng-if="project.type === 'Project'">
+              <td>{{project.title}}</td>
+              <td>{{project.description}}</td>
+              <td><button class="btn btn-danger" ng-click="remove(project._id)">Remove</button></td>
+              <td><button class="btn btn-warning" ng-click="editProject(project._id)">Edit</button></td>
+            </tr>
+            <tr>
+              <input type="hidden" class="form-control" ng-model="project.type" ng-init="project.type ='Project'">
+              <td><input class="form-control" ng-model="project.title"></td>
+              <td><input class="form-control" ng-model="project.description"></td>
+              <td><button class="btn btn-primary" ng-click="addProject()">Add Project</button></td>
+              <td><button class="btn btn-info" ng-click="updateProject()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselectProject()">Clear</button></td>
+            </tr>
+          </tbody>
+        </table>
+
       </div>
     </div>
   </div>
