--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 <body>
 <div id="resume-grid" class="container" ng-controller="AppCtrl">
   <div  class="container">
-  <h1>Resume Application</h1>
-  <h2>Welcome to the Resume Application!</h2>
+  <h1>Karina Martinez</h1>
+  <h2>Welcome to my Resume!</h2>
 
   <ul class="nav nav-pills">
     <li class="active"><a data-toggle="pill" href="#education">Education</a></li>
